# Imager.Core

./: .gitmodules  Imager.cabal  README.md  RaspCuvettor.cabal  stack.yaml
scripts/: LaunchRaspCuvettor
src/: AcquiredDataTypes.hs  AggregateMotorizedStage.hs  Arduino.hs  Asahi.hs  AvailableDetector.hs  BinaryEncoding.hs  BlueBoxOptics.hs  CameraImageProcessing.hs  Coherent.hs  CuvettorJSON.hs  CuvettorTypes.hs  Detector.hs  DummyDetector.hs  DummyEquipment.hs  Equipment.hs  EquipmentEncoding.hs  EquipmentInitialization.hs  EquipmentMessaging.hs  EquipmentPlugins.hs  EquipmentPluginsInternal.hs  EquipmentTypes.hs  FilterUtils.hs  FilterWheel.hs  IrradiationProgram.hs  LightSources.hs  Lumencor.hs  Main.hs  Marzhauser.hs  MeasurementProgram.hs  MeasurementProgramTypes.hs  MeasurementProgramUtils.hs  MeasurementProgramVerification.hs  MicroscopeController.hs  MicroscopeRobot.hs  MiscUtils.hs  MotorizedStage.hs  MultiModeLasers.hs  OODetector.hs  Olympus.hs  Oxxius.hs  (+13 more)
src/Camera/: SCCamera.hs  SCCameraTypes.hs
src/Detectors/: AvailableDetector.hs  Detector.hs  OODetector.hs  SCCamDetector.hs
src/Dummy/: DummyDetector.hs  DummyEquipment.hs
src/Encodings/: BinaryEncoding.hs  EquipmentEncoding.hs
src/Equipment/: Equipment.hs  EquipmentInitialization.hs  EquipmentPlugins.hs  EquipmentPluginsInternal.hs  EquipmentTypes.hs  Plugin.cpp  Plugin.h
src/Equipment/Devices/: ASIStage.hs  ASITigerController.hs  Arduino.hs  Asahi.hs  BlueBoxOptics.hs  Coherent.hs  Lumencor.hs  MarcelOxxius.hs  Marzhauser.hs  MicroscopeController.hs  MultiModeLasers.hs  Olympus.hs  Oxxius.hs  OxxiusLBX.hs  PIStage.hs  PWMLaserController.hs  Prior.hs  RemoteStage.hs  Robottor.hs  Sutter.hs  Thorlabs.hs
src/Equipment/PluginSupport/: Plugin.cpp  Plugin.h  meson.build
src/Equipment/PluginSupport/ImagerPluginCore/: BaseCameraClass.cpp  BaseCameraClass.h  CameraUtils.cpp  CameraUtils.h  DeviceTemplates.h  ImageProcessingUtils.cpp  ImageProcessingUtils.h  ImagerPlugin.cpp  PluginManager.cpp  PluginManager.h  RobotProgramArguments.h
src/Equipment/PluginSupport/src/: PluginImplementation.cpp  PluginImplementation.h
src/Measurements/: MeasurementProgram.hs  MeasurementProgramEncoding.hs  MeasurementProgramTypes.hs  MeasurementProgramVerification.hs  SmartProgram.hs  SmartProgramRunner.hs
src/Measurements/SmartProgramSupport/: SmartProgramExample.py  SmartProgramRunner.py
src/Utils/: DLLUtils.hs  FilterUtils.hs  MeasurementProgramUtils.hs  MiscUtils.hs  WaitableChannel.hs
