name:                Imager
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/RaspCuvettor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Imager
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , async
                     , cereal
                     , deepseq
                     , directory
                     , msgpack
                     , network
                     , text
                     , text-format
                     , time
                     , bytestring
                     , base64-bytestring
                     , containers
                     , transformers
                     , clock
                     , random
                     , serialport
                     , signal
                     , parallel
                     , vector
                     , filepath
                     , req
                     , stm
  other-modules:       AggregateMotorizedStage
                     , CuvettorTypes
                     , Encodings.BinaryEncoding
                     , Equipment.Devices.BlueBoxOptics
                     , Equipment.Equipment
                     , Equipment.EquipmentTypes
                     , Equipment.EquipmentInitialization
                     , Encodings.EquipmentEncoding
                     , Utils.FilterUtils
                     , Equipment.Devices.Marzhauser
                     , Measurements.MeasurementProgram
                     , Measurements.MeasurementProgramTypes
                     , Utils.MeasurementProgramUtils
                     , Measurements.MeasurementProgramVerification
                     , Measurements.SmartProgram
                     , RCSerialPort
                     , Detectors.Detector
                     , Utils.MiscUtils
                     , Utils.DLLUtils
                     , Equipment.Devices.Arduino
                     , Equipment.Devices.Asahi
                     , Equipment.Devices.ASITigerController
                     , Equipment.Devices.Coherent
                     , Dummy.DummyEquipment
                     , Equipment.Devices.Lumencor
                     , Equipment.Devices.Olympus
                     , Equipment.Devices.Oxxius
                     , Equipment.Devices.MarcelOxxius
                     , Equipment.Devices.Prior
                     , Equipment.Devices.PIStage
                     , Equipment.Devices.Robottor
                     , Equipment.Devices.Sutter
                     , Equipment.Devices.RemoteStage
                     , Camera.SCCameraTypes
                     , Equipment.Devices.Thorlabs
                     , Equipment.Devices.PWMLaserController
                     , Equipment.EquipmentPlugins
                     , Equipment.EquipmentPluginsInternal
                     , Equipment.Devices.MultiModeLasers
                     , Equipment.Devices.OxxiusLBX
                     , SimpleJSONServer
  default-extensions:  CPP, BangPatterns, OverloadedStrings, ScopedTypeVariables, OverloadedRecordDot
  extra-libraries:     
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields -Wall

  if (os(windows))
      cpp-options:     -DWINDOWS
