name:                RaspCuvettor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/RaspCuvettor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag withoceanoptics {
    Description:     Enable Ocean Optics support
    Default:         False
}
Flag withsccamera {
    Description:     Enable SCCamera support
    Default:         False
}
Flag withdummydetector {
    Description:     Enable dummy detector
    Default:         False
}

executable RaspCuvettor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , cereal
                     , deepseq
                     , network
                     , text
                     , text-format
                     , time
                     , bytestring
                     , base64-bytestring
                     , containers
                     , transformers
                     , clock
                     , random
                     , serialport
                     , parallel
                     , vector
                     , filepath
                     , SimpleJSONServer
                     , GPIO
  other-modules:       CuvettorTypes
                     , BinaryEncoding
                     , FilterWheel
                     , LightSources
                     , MotorizedStage
                     , MeasurementProgram
                     , MeasurementProgramTypes
                     , MeasurementProgramVerification
                     , Detector
                     , AvailableDetector
                     , MiscUtils
  default-extensions:  CPP
  ghc-options:         -O2 -threaded

  if (flag(withoceanoptics))
      build-depends:   hsOceanOptics
      cpp-options:     -DWITH_OCEANOPTICS
      other-modules:   OODetector
  if (flag(withsccamera))
      build-depends:   hsSCCamera
      cpp-options:     -DWITH_SCCAMERA
      other-modules:   SCCamDetector
  if (flag(withdummydetector))
      cpp-options:     -DWITH_DUMMYDETECTOR
      other-modules:   DummyDetector
