name:                RaspCuvettor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/RaspCuvettor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable RaspCuvettor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , cereal
                     , deepseq
                     , directory
                     , network
                     , text
                     , text-format
                     , time
                     , bytestring
                     , base64-bytestring
                     , containers
                     , transformers
                     , clock
                     , random
                     , serialport
                     , parallel
                     , vector
                     , filepath
                     , SimpleJSONServer
  other-modules:       AcquiredDataTypes
                     , AggregateMotorizedStage
                     , CuvettorTypes
                     , BinaryEncoding
                     , BlueBoxOptics
                     , Equipment
                     , EquipmentTypes
                     , EquipmentInitialization
                     , EquipmentEncoding
                     , EquipmentPlugins
                     , EquipmentPluginsInternal
                     , FilterUtils
                     , Marzhauser
                     , MeasurementProgram
                     , MeasurementProgramTypes
                     , MeasurementProgramUtils
                     , MeasurementProgramVerification
                     , MicroscopeController
                     , RCSerialPort
                     , Detector
                     , AvailableDetector
                     , MiscUtils
                     , Arduino
                     , PWMLaserController
                     , Asahi
                     , Coherent
                     , DummyEquipment
                     , Lumencor
                     , Marzhauser
                     , Olympus
                     , Oxxius
                     , Prior
                     , Robottor
                     , Sutter
                     , SCCamera
                     , SCCameraTypes
                     , SCCamDetector
                     , Thorlabs
  default-extensions:  CPP, BangPatterns, OverloadedStrings, ScopedTypeVariables
  extra-lib-dirs:      C:\hslibs
  extra-libraries:     MicroscopeControl
                     , SCCamera
  ghc-options:         -O2 -threaded -rtsopts -funbox-strict-fields

  if (os(windows))
      cpp-options:     -DWINDOWS
